widht, height, border e padding no box model

--- a/aulas-html-css/2_CSS/style.css
+++ b/aulas-html-css/2_CSS/style.css
@@ -4,16 +4,20 @@ h2 {
 }
 
 h3 {
-    color: cornflowerblue;
+    color: rgb(37, 67, 122);
     font-size: 25px;
 }
 
 p {
-    color: peru;
+    color: rgb(0, 255, 85);
 }
 
 /* 6 - classes */
 
 .paragrafos {
     background-color: darkblue;
+}
+
+.cor-textos {
+    color: red;
 }
